--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,11 @@
+<Files ~ "^\.(htaccess|htpasswd)$">
+deny from all
+</Files>
+Options -Indexes
 AuthUserFile /Users/ootsukarei/Desktop/programming/masason-thunderbirds-1/.htpasswd
 AuthGroupFile /dev/null
 AuthName "Please enter your ID and password"
 AuthType Basic
-require valid-user
+require valid-user 
+DirectoryIndex index.html blog.html article.html aircraftData.html team.html   
+order deny,allow
